packages/next-swc/crates/core/tests/errors/next-font-downloaders/arg-not-object/output.js
fn(10);
Inter(10);
const obj = {};
const s = Sacramento(obj);
